feat: add getChats route
